<resources>
    <string name="app_name">160421095 Hobby App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="password">Password</string>
</resources>