<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNamaDepan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_depan" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNamaBelakang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_belakang" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@color/design_default_color_error"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>